core: Create MemoryDisks type instead of generic List
There are always 2 memory disks, and their order matters.
This patch replaces the generic List type with a new type
to represent them.

Change-Id: Ief4d6118521e3b9447e8bad8586e525ef78d21cd
Signed-off-by: Andrej Krejcir <akrejcir@redhat.com>